--- a/PWBD.html
+++ b/PWBD.html
@@ -201,11 +201,37 @@
                    <!--p>In the case of the virtual museum the idea was different, but similar under some aspects: to develope ????</p-->
                 </div>
               </div>
-            </div>
+            
+		<p>The two institutions, as shown in the table below, have in common only the <strong>exibhits</strong> asset and they are substantially different:
+	      </p>
+	      <p>
+        <table>
+        <tr><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
+		<tr><td>Retail</td><td>Guides</strong></td></tr>
+		<tr><td>location</td><td>digital resource</td></tr>
+		<tr><td>fame</td><td>outreacht activities</td></tr>
+        <tr><td>exibhits*</td><td>exibhits*</td></tr>
+        </table>
+        </p>	    
+	    </div>
             
             <div class="container" id="Personae">
-          <h5>The target audience with characteristics, motivations, capabilities and devices)Personae e altro</h5>
-          <p><b>PUT "PERSONAE".</b></p>
+          <h5>The target audience with characteristics, motivations, capabilities and devices)</h5>
+         <p>
+				From the same previous step of the Ideation Cards, we could outline that the two institutions had more point of contacts in the target audience than in the assets: in fact, they share the two categories of <strong>art and animal passionate</strong> as well as the part of <strong>users enjoying collections online</strong>. <br>
+				All these audiences are <strong>quite familiar with technological devices</strong> that they are used to use for several daily tasks (find an address, search for a professional, sending and receiving email and instant messaging, etc.)<br>
+				On these bases, we created the Personas - as defined by the Alan Cooper method  - available in the Development section.
+				</p>		
+
+		<p>
+        <table>
+        <tr><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
+		<tr><td>digital visitors*</td><td>sofa lovers</td></tr>
+		<tr><td>art passionate*</td><td>art students/scholars*</td></tr>
+		<tr><td>casual tourist</td><td>kids</td></tr>
+        <tr><td>animal passionate*</td><td>passionate with pets*</td></tr>
+        </table>
+        </p>
           </div>
 
             <div class="container" id="Location">       
