--- a/PWBD.html
+++ b/PWBD.html
@@ -664,7 +664,53 @@ Cognitive: increase visitor participation (new services as “Search for your pe
     </div>      
   </div>
   </br>
-                           
+  <div class="row" style="background: black; color:white; text-align: center; margin-top: 5pt">
+      <div class="col-lg-12 col-md-12 d-flex align-items-stretch" style="margin-top: 5vw;">
+    <h4 style="margin-left: 15%">From the point of view of the user: an Interaction Diagram</h4> 
+      </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/choose_guide.png" width="80%" style="margin-left: 10%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <p>For the first step, the user is given the possibility to choose a "virtual guide" among the five animals given by default or to create his/her own guide uploading a picture. The guide's name can be personalised as well. </p>
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/room.png" width="80%" style="margin-left: 10%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <p style="margin-left: 2%">In the following step, the user enters the virtual room where the guide explains him/her the characteristics of each artwork.</p>
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/concluding.png" width="80%" style="margin-left: 10%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <p>Just before the user exits the virtual room, the guide offers him/her a range of four different interactive activities. They want to involve the user and his/her personal experiences or feelings. </p>
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/evaluation.png" width="80%" style="margin-left: 10%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <p>In the last step, before the whole visit ends, the user is invited to fill an evaluation form through which he/she can express his/her personal opinion about the entire virtual experience.</p>
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    </div>
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <img src="assets/img/ID/bye.png" width="80%" style="margin-left: 10%">
+    <p></p>
+    </div>
+
+   
+  </div>                         
                            
       <h5>(c) Development to reach the cognitive focus</h5-->
   </div>
