--- a/PWBD.html
+++ b/PWBD.html
@@ -309,11 +309,18 @@
         As shown in some examples of profiles provided below, nowadays, animals are still humanized also via the social media, becoming protagonists of social posts and even owners of social media pages, with big success and millions of followers.<br>
         An overall presentation of these analysis can be found in the <a href="index.html#social_data">On Social media</a> data section.
 
-        <div>
-          <img src="assets/img/maya.png" width="33%">
-          <img src="assets/img/topi.png" width="33%">
-          <img src="assets/img/marnie.png" width="33%">
-        </div>
+        
+		          <div class="row">
+    <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+	<img src="assets/img/maya.png">
+	</div>
+	<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+	 <img src="assets/img/topi.png" width="33%">
+	</div>
+	<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+      <img src="assets/img/marnie.png" width="33%">
+    </div>
+		</div>
 		</div>
           </div>
 
