--- a/PWBD.html
+++ b/PWBD.html
@@ -618,13 +618,13 @@ In particular, these are the three main goals the interactive application wants 
     <h4 style="margin-left: 15%">From the point of view of the user: an Interaction Diagram</h4> 
       </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/choose_guide.png" width="80%" style="margin-left: 10%">
+    <img src="assets/img/ID/choose_guide.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
     <p>For the first step, the user is given the possibility to choose a "virtual guide" among the five animals given by default or to create his/her own guide uploading a picture. The guide's name can be personalised as well. </p>
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    <img src="assets/img/ID/arrow.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
     <img src="assets/img/ID/room.png" width="80%" style="margin-left: 10%">
