--- a/PWBD.html
+++ b/PWBD.html
@@ -624,7 +624,7 @@ In particular, these are the three main goals the interactive application wants 
     <p>For the first step, the user is given the possibility to choose a "virtual guide" among the five animals given by default or to create his/her own guide uploading a picture. The guide's name can be personalised as well. </p>
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/arrow.png">
+    <img class="arrow" src="assets/img/ID/arrow.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
     <img src="assets/img/ID/room.png" width="80%" style="margin-left: 10%">
