--- a/PWBD.html
+++ b/PWBD.html
@@ -627,34 +627,34 @@ In particular, these are the three main goals the interactive application wants 
     <img class="arrow" src="assets/img/ID/arrow.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/room.png" width="80%" style="margin-left: 10%">
+    <img src="assets/img/ID/room.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
     <p style="margin-left: 2%">In the following step, the user enters the virtual room where the guide explains him/her the characteristics of each artwork.</p>
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    <img  class="arrow" src="assets/img/ID/arrow.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/concluding.png" width="80%" style="margin-left: 10%">
+    <img src="assets/img/ID/concluding.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
     <p>Just before the user exits the virtual room, the guide offers him/her a range of four different interactive activities. They want to involve the user and his/her personal experiences or feelings. </p>
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    <img class="arrow" src="assets/img/ID/arrow.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/evaluation.png" width="80%" style="margin-left: 10%">
+    <img src="assets/img/ID/evaluation.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
     <p>In the last step, before the whole visit ends, the user is invited to fill an evaluation form through which he/she can express his/her personal opinion about the entire virtual experience.</p>
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/arrow.png" width="14%" style="margin-left: 43%">
+    <img class="arrow" src="assets/img/ID/arrow.png">
     </div>
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-    <img src="assets/img/ID/bye.png" width="80%" style="margin-left: 10%">
+    <img src="assets/img/ID/bye.png">
     <p></p>
     </div>
    
