--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">        
             <div class="icon-box">
-              <img src="assets/img/your_stories/Milo_Lilo.jpeg" height="50%">
+              <img src="assets/img/your_stories/Milo_Lilo.jpeg" width="50%">
               <!--div class="icon"><i class="bx bxl-dribbble"></i><img src="assets/img/frida_a4.png" width="100%"></div-->
               <h4>Milo and Lilo</h4>            
               <p>Milo and Lilo are different twins: different ages, different aptitudes, different plays.</p>
