--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <img src="assets/img/your_stories/Pollon.jpeg" height="50%">
+              <img src="assets/img/your_stories/Pollon.jpeg" width="50%">
               <!--div class="icon"><i class="bx bx-file"></i></div-->
               <h4>Pollon (aka Polly)</h4>
               <p>Pollon aka Polly arrived in our lifes 5 years ago. She is a very princess aptitude little dog, with lovely rabbit ears. </br>
@@ -221,7 +221,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <img src="assets/img/your_stories/Fatoush.jpeg" height="50%">
+              <img src="assets/img/your_stories/Fatoush.jpeg" width="50%">
               <!--div class="icon"><i class="bx bx-tachometer"></i></div-->
               <h4>فتوش‎, Fatoush</h4>
               <p>Fatoush comes from Lebanoon. He often stays looking at the windows remembering the first hot summers we spent there togheter.</p>
