--- a/index.html
+++ b/index.html
@@ -115,22 +115,21 @@
   
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+        <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-lg-4 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+          <div class="col-lg-3 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <img src="assets/img/SCHRODINGER.jpeg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+          <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About</h3>
-            <!--p class="fst-italic"></p><h3>Titolo da definire</h3-->
-            <p><strong>Wanted!</strong> is a project inspired by a <a href="#preliminary_data">corpus of lost pet advertisement photographs</a> collected over the years in various places.</p>
-            <p> The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</p><br>
-            <p>At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data.<br>
-            Each user can have the option to upload and share their own story or simply link that of others.</br>
-            In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted to consecrate their emotional ties with their animal.
+			<p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs, collected by the authors over the years in various places and visible in the <a href="#preliminary_data">Preliminary Data and Inspiration</a> section.<br>     
+        It is focused on the complex relationship between humans and their pets in an anti-speciesist view of interpersonal relationship and family binds.</p>
+<p>        The name <strong>Wanted!</strong> comes from the strong visual relationship of these SOS-flyers with the <cite>Old West</cite> bandit bans even if, like the subtitle “Alive or Alive” explains, with different and opposite purposes and intents.</p>
+<p>        
+        The website, is conceived as a multi-dimensional cultural environment offering different paths to be explored: a <strong>current virtual exhibition</strong> and its <strong>related interactive applications</strong> in the <a href="in_art.html">In Art – The Exhibit</a> section; a <strong>growing souvenir-book</strong> built from users’ stories in the <a href="index.html#your_stories">Your Stories</a> section; and a <strong><a href="index.html#data">Data</a> section</strong> to access data – such as the already mentioned corpus of lost-pets-advertisements photographs - analysed to realize the project.</p>       
             </p>
           </div>
         </div>
