--- a/PWBD.html
+++ b/PWBD.html
@@ -328,8 +328,11 @@
             
         <div class="container" id="cognitive">
         <h5>Chosen cognitive focus among: 1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall - 2nd step</h5>
-        <p>Since we already decided to base the project on the concept of sentymental bond between a human and its animal, the question at this point was how to translate it in an interesting idea for a cultural initiative.
-        The challenge was to not result trivial and at the same time to find a theme that coulded be suitable for both an educational and affective final goal.</p>       
+        <p>We then could count on solid basis to go further with the idea of using the sentimental bond between a pet and its human to create a cultural initiative and a related interactive application based on the cognitive focuses of:</p>
+		<ul>
+		<li>Meaningfulness-Emotions-Empathy</li>
+		<li>Memory-Recall</li>
+		</ul>      
         </div>
 
 		<!-- ======= Intro>Concept>CognitiveFocus end/Intro>Concept>IdeationCards start ======= -->
