--- a/PWBD.html
+++ b/PWBD.html
@@ -466,7 +466,7 @@ To this scope, we completed the museological path for two pilot artists – Frid
 The visit is then divided in rooms, accordingly with the path of the Virtual linear exhibition, each of which is dedicated to a different artist and its bond with their pet and other animals. The virtual room is showed as a real museum room (walls, sofa, paints with panels), the paintings have an interactive panel trough which (by clicking it) the user can visualize the work and go into detail.<br>
 </div>
 <div class="container">
-<h6>Theoric classification</h6>
+<h6>Virtual Exhibition and Interaction Application classification</h6>
 <p>
 The application, whose details will be discussed in the Development section, has then engagement and education as primary goals and it can be classified in the E or F category, according to Simona Caraceni taxonomy:</p>
 
@@ -479,9 +479,30 @@ The application, whose details will be discussed in the Development section, has
         <tr><td>VISITORS CONTRIBUTIONS</td><td>Allowed</td></tr>
         </table>
 
-<p>E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. 
-F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS.</p>
-      </div>
+<p>According to Caraceni taxonomy we can define our cultural environment as:
+<cite><ul>
+<ol>E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS.</ol>
+<ol>F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS.</ol>
+</ul></cite></p>
+
+<p>To classify the Interactive application proposed - Choose your guide - we used the <strong>V-MUST (1-8)</strong> and <strong>Hornecker-Ciolfi (9.1-9.3)</strong> classifications:</p>
+
+<table>
+<tr><td>1. By Content</td><td>...</td></tr>
+<tr><td>2. By Interaction technology</td><td>device-based, speech-based</td></tr>
+<tr><td>3. By Duration</td><td>...</td></tr>
+<tr><td>4. By Communication</td><td>narrative, dramatization</td></tr>
+<tr><td>5. By Level of immersion</td><td>medium</td></tr>
+<tr><td>6. By Format</td><td>desktop and mobile, on line</td></tr>
+<tr><td>7. By Scope</td><td>education, engagement</td></tr>
+<tr><td>8. By Sustainability</td><td> (Level of Readiness, PR, OpenSource)</td></tr>
+<tr><td>9.1 Relationship to the Museum Environment-Space and Visitor Mobility</td><td>2. Mobile interaction</td></tr>
+<tr><td>9.2 Relation to the form of augumentation and experience</td><td>2. Extended Reality: VR</td></tr>
+<tr><td>9.3 Interaction beyond the physical visit</td><td>1. post-visit: engaging the visitor; 2. pre-visit: preparing visit</td></tr> 
+</table>
+</div>
+</div>
+
     	<!-- ======= Intro>Concept>Museological>Parts end ======= -->
 	</div>
         	<!-- ======= Intro>Concept>Museological end ======= -->  
