--- a/PWBD.html
+++ b/PWBD.html
@@ -537,7 +537,7 @@ In particular, these are the three main goals the interactive application wants 
     </div>
    <!-- ======= Intro>Goals end/Intro>Requirements start ======= --> 
 
-    <div class="container accordion" id="Requirements">
+    <!--div class="container accordion" id="Requirements">
     <div class="accordion-item">
     <h2 class="accordion-header" id="headingRequirements">
     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseRequirements" aria-expanded="true" aria-controls="collapseOne">
@@ -556,7 +556,9 @@ In particular, these are the three main goals the interactive application wants 
     </div>
     </div>
     </div>
-      </div>
+      </div-->
+<!-- ======= Intro>Requirements end ======= --> 
+
   </div>
   </div>
   
