--- a/PWBD.html
+++ b/PWBD.html
@@ -687,7 +687,7 @@ In particular, these are the three main goals the interactive application wants 
    
   </div>                   
   
-									 <div class="row">
+<!--div class="row">
     <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
       <h5><b>Share your Stories</b></h5></br>
         </div>
@@ -703,7 +703,7 @@ In particular, these are the three main goals the interactive application wants 
     <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
      <iframe src="Share.html" title="Share your Stories application" width="100%"></iframe>
     </div>      
-  </div>
+  </div-->
                            
   </div>
   </div>  
