--- a/PWBD.html
+++ b/PWBD.html
@@ -488,17 +488,17 @@ The application, whose details will be discussed in the Development section, has
 <p>To classify the Interactive application proposed - Choose your guide - we used the <strong>V-MUST (1-8)</strong> and <strong>Hornecker-Ciolfi (9.1-9.3)</strong> classifications:</p>
 
 <table>
-<tr><td>1. By Content</td><td>...</td></tr>
+<tr><td>1. By Content</td><td>human-pet affective relationship</td></tr>
 <tr><td>2. By Interaction technology</td><td>device-based, speech-based</td></tr>
-<tr><td>3. By Duration</td><td>...</td></tr>
+<tr><td>3. By Duration</td><td>basically short; depending on the user's choices</td></tr>
 <tr><td>4. By Communication</td><td>narrative, dramatization</td></tr>
 <tr><td>5. By Level of immersion</td><td>medium</td></tr>
 <tr><td>6. By Format</td><td>desktop and mobile, on line</td></tr>
 <tr><td>7. By Scope</td><td>education, engagement</td></tr>
-<tr><td>8. By Sustainability</td><td> (Level of Readiness, PR, OpenSource)</td></tr>
-<tr><td>9.1 Relationship to the Museum Environment-Space and Visitor Mobility</td><td>2. Mobile interaction</td></tr>
-<tr><td>9.2 Relation to the form of augumentation and experience</td><td>2. Extended Reality: VR</td></tr>
-<tr><td>9.3 Interaction beyond the physical visit</td><td>1. post-visit: engaging the visitor; 2. pre-visit: preparing visit</td></tr> 
+<tr><td>8. By Sustainability</td><td>to be analysed</td></tr>
+<tr><td>9.1 Relationship to the Museum Environment-Space and Visitor Mobility</td><td>mobile interaction</td></tr>
+<tr><td>9.2 Relation to the form of augumentation and experience</td><td>extended Reality: VR</td></tr>
+<tr><td>9.3 Interaction beyond the physical visit</td><td>post-visit: engaging the visitor; pre-visit: preparing visit</td></tr> 
 </table>
 </div>
 </div>
