--- a/PWBD.html
+++ b/PWBD.html
@@ -940,7 +940,7 @@ In particular, these are the three main goals the interactive application wants 
                 </div>
               </div>
               <div class="member-info">
-                <h4>Alisia Zarbo</h4>
+                <h4>Alisia Zarbo and Billy</h4>
                 <span>Ideation card museological approach; social media analysis; Personae; Scenarios with Twine; Virtual Frida's room with Blender; feasibility plan.</span>
               </div>
             </div>
