--- a/in_art.html
+++ b/in_art.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Wanted! In Art - Iconic Stories - The exhibit</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Wanted!" name="description">
+  <meta content="Art, Photograph, Pets, Love, Memories, Froda Kahlo, Giosetta Fioroni, Pablo Picasso" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -51,10 +51,8 @@
           <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="PWBD.html">Project Work Design Brief</a></li>
-          <!--li><a class="nav-link scrollto" href="">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li-->
           <li><a class="nav-link scrollto" href="PWBD.html#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -62,7 +60,7 @@
       <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
       <a href="ChooseGuide.html" class="get-started-btn scrollto" 
          onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a>
-      <a href="Share.html" class="get-started-btn scrollto" 
+      <a href="index.html#cta" class="get-started-btn scrollto" 
          onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Share your story!</a>
 
     </div>
@@ -200,10 +198,11 @@
       </div>
     </div>
 
-    <div class="container">
+<div class="container">
       <div>
-        <p><strong>Wanted!</strong> is a project developed for the final exam of <emph>Digital Heritage and Multimedia</emph> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. Texts and contents organization are released with a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
-        <!--p><strong>Images comes .......</p-->
+        <p><strong>Wanted!</strong> is a project developed for the final exam of <em>Digital Heritage and Multimedia</em> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. Texts and contents organization are released with a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
+        <p><strong>Images could be copyrighted. They are reported in this website only with illustrative purposes in an eductional and research framework.<br>
+		Please, refer to the source institution where reported.</strong></p>
       </div>
       <div class="copyright">Website template &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved</div>
       <div class="credits">
@@ -215,7 +214,7 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-
+	    	    
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
