--- a/PWBDom2.html
+++ b/PWBDom2.html
@@ -209,7 +209,7 @@
 <nav id="exhibit-pages" class="side">
     <h4><a href="/exhibits/show/frida-and-granizo">Intro</a></h4>
     <ul><li class="current"><a href="/exhibits/show/frida-and-granizo/artist-pet-story-brief-introdu">The context</a>
-		<ul><li><a href="#" onclick="('#ACTUALCONTENT').load('PWBD.html')">Reference institutions and institutional goals</a></li>
+		<ul><li><a href="#" onclick="$('#ACTUALCONTENT').load('Nobu.html')">Reference institutions and institutional goals</a></li>
 		<li><a href="#" onclick="change_page('in_art.html')">Relevant assets</a></li>
 		<li><a href="/exhibits/show/frida-and-granizo/more-info-about-the-artist">The target audience with characteristics, motivations, capabilities and devices</a></li>
 		<li><a href="/exhibits/show/frida-and-granizo/more-info-about-the-artist">The location</a></li>
