--- a/PWBD.html
+++ b/PWBD.html
@@ -737,25 +737,32 @@ In particular, these are the three main goals the interactive application wants 
         <div class="accordion-body">
           
           <div class="container" id="WF"> 
-      <p>The actual realization of the sketched Virtual Exhibition and the related applications surely required a multidisciplinary team with professionals covering all aspects of issues related to contents or technical aspects; here just a probability incomplete list:</p>
+<p>The actual realization of the pilot version of Virtual Exhibition, the 3d room and the related applications, have been possible using the following software and tools:</p>
+
+<p>
+<ul>
+<ol>1. <a href="https://github.com/" target="_blank">Github</a>: website repository</ol>
+<ol>2. <a href="https://www.omeka.net/" target="_blank">Omeka.net</a> (free trial version): Virtual Exhibition</ol>
+<ol>3. <a href="https://www.blender.org/" target="_blank">Blender</a>: 3d room</ol>
+<ol>4. <a href="https://twinery.org/" target="_blank">Twine</a>: interaction diagrams</ol>
+<ol>5. <a href="https://www.3dflow.net/it/software-di-fotogrammetria-3df-zephyr/" target="_blank">Zephir 3d (14 days free Lite version trial)</a>: 3d print your pet (not realised application)</ol>
+</ul>
+</p>
+
+<p>The future complete realization of the project will surely require a <strong>multidisciplinary team</strong> with professionals covering all issues related to contents or technical aspects. <br>
+Here are listed just the main:
+</p>
 <p><ul>
-<ol>1.  Art historian: to curate the scientific aspects of the exhibition and the related documentation</ol>
+<ol>1.	Scientific committee composed by Art historian, Ethologist, Antropologist etc.: to curate the scientific aspects of the exhibition and the related documentation</ol>
 <ol>2.  Art curator/gallerist/copyright lawyer: to face the copyright issues and possible request of reproduction</ol>
-<ol>3.  Pedagogist: to balance the contents and the language used according to the different target of the classical VE or the interactive app</ol>
-<ol>4.  a software developer – if not adopted a friendly software - in charge of the back-end</ol>
-<ol>5.  Communication team and Social media manager: to curate the website and the social media and reach new public and</ol>
-<ol>6.  User experience expert and a 3d modeller: to realize 3d guides and 3d artists’ rooms</ol>
-<ol>7.  Someone with expertise in evaluating the impact and the feedback</ol>
+<ol>3.  Pedagogist: to balance the contents and the language used according to the different target of the fruition paths (classical Virtual Exhibition or the 3d rooms or interactive applications)</ol>
+<ol>4.  Software developers in charge of the back-end</ol>
+<ol>5.  Communication team and Social media manager: to curate the website and the social media and reach new public and realise marketing strategies</ol>
+<ol>6.  User experience experts and a 3d modellers: to realize 3d guides and 3d artists’ rooms</ol>
+<ol>7.	Statisticians or sociologist to evaluatehe impact and the feedback </ol>
 </ul>
 </p>  
 
-<p>For the realization of the pilot version of VE and the related applications, we used the following software and tools:</p>
-<p><ul><ol>1. Github
-<ol>2.  Omeka.net</ol>
-<ol>3.  Blender</ol>
-<ol>4.  Twine</ol>
-<ol>5.  Zephir 3d</ol>
-</ul></p>
 
 </div>
   </div>  
