--- a/PWBD.html
+++ b/PWBD.html
@@ -779,8 +779,9 @@ Here are listed just the main:
         <div class="accordion-body">
           <div class="container" id="maintenance">  
 
-	<p>Further developments of the project include the forthcoming release of a tool “Search for your pet” to help people to share their missed pet advertisement by loading, sharing, and visualizing geolocated data of their missing pets. A merchandising section will also propose funny or educational items for sale.</p>
-     
+	<p>Further developments of the project include the forthcoming release of new tools and merchandising conceived to improve the users interaction and engagement as well as to assure the project sustainability. To achieve these goals, the creation of a network of partnerships and/or sponsorships with economic and cultural related realities	will be welcomed. These relationship will also increase the project visibility and the possibility to have social media adv revenues - an example have been shown in the Sofia scenario.</p>
+	Some of our proposal are illustrated in the Forthcoming section and briefly listed below:</p>
+
 	 	 <div class="row">
 		 
 	<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
