--- a/PWBD.html
+++ b/PWBD.html
@@ -784,7 +784,7 @@ Here are listed just the main:
 
 	 	 <div class="row">
 		 
-	<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	<div class="col-lg-8 col-md-8 d-flex align-items-stretch">
 	<div>
 	<h3>Search for your pet application</h3>
 	<p><a href="index.html#" target="_blank"><strong>Search for your pet</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>
@@ -798,23 +798,8 @@ Here are listed just the main:
 		</p>
     </div>
 	</div>
-<div class="col-lg-3 col-md-3 d-flex align-items-stretch">
-	<div>
-	<h3>Funny merchandising - Panini Trading cards and album</h3>
-	<p><a href="index.html#" target="_blank"><strong>Panini Trading cards and album</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>
-<div>
-</div>    
-	<img src="assets/img/further_dev/paniniW.jpg" title="Panini album Wanted! edition">
-		<p>
-		<div class="portfolio-links">
-			<a href="assets/img/further_dev/paniniW.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Panini album Wanted! edition"><i class="bx bx-plus"></i></a>
-		</div>
-		</p>
-    </div>
-	
-</div>  
 
-<div class="col-lg-3 col-md-3 d-flex align-items-stretch">
+<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	<div>
 	<h3>Funny merchandising - 3d print your pet</h3>
 	<p><a href="index.html#" target="_blank"><strong>3d print your pet</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>
@@ -835,15 +820,30 @@ Here are listed just the main:
 
      
 	 	 <div class="row">
-	<h3>Educational merchandising</h3>
 	
-	<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	<div>
-	<h4>Memory</h4>
-	<p><a href="index.html#" target="_blank"><strong>Search for your pet</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>
-<div>
+	<h3>Funny merchandising - Panini Trading cards and album</h3>
+	<p>Starting from the strong tradition of the Panini Trading cards and album, already offering personalized products from their <a href="" target="_blank">website and applications</a>, we tought to realize a <strong>Panini Trading cards and album Wanted! edition</strong>. Looking for the missing card among other passionated will improve engagement and experience sharing.</p>
+</div>
+<div>    
+	<img src="assets/img/further_dev/paniniW.jpg" title="Panini album Wanted! edition">
+		<p>
+		<div class="portfolio-links">
+			<a href="assets/img/further_dev/paniniW.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Panini album Wanted! edition"><i class="bx bx-plus"></i></a>
+		</div>
+		</p>
+    </div>
+	
+</div>  
+				 
+	<div class="col-lg-8 col-md-8 d-flex align-items-stretch">
+	<div>
+	 <h3>Educational merchandising - Memory and Guess Who? board games (and online versions)</h3>
+<p>scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).
+	</p>	
 </div>    
-	<img src="assets/img/further_dev/memory_wanted.png" title="Memory Wanted! edition">
+<div>	<img src="assets/img/further_dev/memory_wanted.png" title="Memory Wanted! edition">
 		<p>
 		<div class="portfolio-links">
 			<a href="assets/img/further_dev/memory_wanted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Memory Wanted! edition"><i class="bx bx-plus"></i></a>
