--- a/PWDBnew.html
+++ b/PWDBnew.html
@@ -177,11 +177,12 @@
 
 
         <div id="content" role="main" tabindex="-1">
-<!--div class="container">
- <h1><span class="exhibit-page">PWDW</span></h1-->
+<div class="container">
+ <h1><span class="exhibit-page">Project Work Design Brief</span></h1>
 
 <div class="row container">
 <div class="container col-lg-9 col-md-6" id="ACTUALCONTENT">
+	<h2>Introduction</h2>
         <p><strong class="title">Wanted!</strong>is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs, collected by the authors over the years in various places.<br>     
         It is focused on the complex relationship between humans and their pets in an anti-speciesist view of interpersonal relationship and family binds.</p>
 <p>        The name <strong>Wanted!</strong> comes from the strong visual relationship of these SOS-flyers, analysed in a more detailed way in <a href="#CHtopic">The Concept</a> section, with the <cite>Old West</cite> bandit bans even if, like the subtitle “Alive or Alive” explains, with different and opposite purposes and intents.</p>
@@ -240,9 +241,8 @@
 		<li><a href="#" onclick="change_page('5.html')">Complementary Material for the Discussion: 3d object and scenes</a></li>
 		</ul>
 		</ul>
-</nav>
-
-</div>
+	</nav>
+	</div>
 
 </div>
 
@@ -264,14 +264,14 @@
 </div>
 <!--end main-->
 
-<!--script type="text/javascript">
+<script type="text/javascript">
 jQuery(document).ready(function () {
     Omeka.showAdvancedForm();
     Omeka.skipNav();
     Omeka.megaMenu("#top-nav");
     Seasons.mobileSelectNav();
 });
-</script-->
+</script>
 
 
 
