--- a/PWBD.html
+++ b/PWBD.html
@@ -197,6 +197,10 @@
                    <div class="portfolio-links">
 					<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution"><i class="bx bx-plus"></i></a>
 					</div>
+		<p>In this section we found really useful the use of ideation cards, this tool helped us with the delineation of the project taking into account more other aspects. First, the goal that at the end of the project we would the visitor to reach; in this case, we didn’t think this project as primary dedicated to the culture expansion, it has not didactical goals, but it is possible to reach them. Anyway, the most important aim that this project want to reach is the increasing of the outreach; how? First, by creating a safe space of sharing where to find empathy and build a social network, and second, in a more pragmatic way, by providing useful tools to share a personal experience.
+The motivations are at the base of the goals, inclusion and personal relevance are those feelings that the user must feel at the end of its experience.
+The star asset is, obviously, the digital resource, since the initiative is present exclusively on the web; at the same time, the user doesn’t need a particular knowledge of the digital tools, it is sufficient to have a minimal knowledge of how to use a computer in its most simple functionalities.
+It can be a barrier too, if the user doesn’t have one of the devices needed to visualise the experience or an even minimal knowledge of the technology.</p>
                 </div>
             </div>				
 	
@@ -588,9 +592,9 @@ In particular, these are the three main goals the interactive application wants 
         <div id="collapseTheStory" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
           <div class="accordion-body">
           
-            <div class="container" id="Story">  
-  <p>Our story tells about a young-adult visitor looking for a new approach art history exhibition. He or she finds the Wanted! website where it is possible to access a short historical preview in the In History section and a selection of pieces of art in the In Art section. She or he is emotionally involved due to their childhood and recent souvenirs about their pets. They enjoy the exibihion, they gain more knowledge and they are happy to contribute at Your stories section with their pets' stories. Moreover they are happy and amused to realize a 3d rendering of their pet to be used in VR or AR and to be able to order for a 3d printed model of it to be gifted.</p>
-  <div class="container">
+            <div class="container" id="Story"> 
+<p>As it emerged from the creative process developed via ideation cards, we have identified two ideal profiles for the users of this initiative: Marco and Sofia. In outlining them, we took into account some specific aspects: gender, age and social factor. 
+Sofia is an high school student, she spend a lot of time on the telephone, like most of the guys and the girls of her generation; in this scenario we imagined an example of functional use of technology, useful to the her learning and her social sharing activity. Marco is Matilda’s father, he wants to be, as much as he can, present in her life choices; he doesn’t want her to be unconfident with technologies, on the contrary he wants her to learn how to use it in responsible and constructive way.</p>  <div class="container">
           <h6>PERSONAS</h6>
   <div class="two-grid">
     <div class="left">
