--- a/PWDBnew.html
+++ b/PWDBnew.html
@@ -178,8 +178,6 @@
 
         <div id="content" role="main" tabindex="-1">
 <div class="container">
- <h1><span class="exhibit-page">Project Work Design Brief</span></h1>
-
 <div class="row container">
 <div class="container col-lg-9 col-md-6" id="ACTUALCONTENT">
 	<h2>Introduction</h2>
@@ -206,7 +204,7 @@
 <div class="container col-lg-3 col-md-6">
 
 <nav id="exhibit-pages" class="side">
-    <ul><li class="current"><a href="#" onclick="change_page('1_0.html')">Intro</a>
+    <ul><li class="current"><a href="PWDBnew.html">Intro</a>
 		<ul><li><a href="#" onclick="change_page('1_1_1.html')">The context</a>
 			<ul><li><a href="#" onclick="change_page('1_1_1.html')">Reference institutions and institutional goals</a></li>
 			<li><a href="#" onclick="change_page('1_1_2.html')">Relevant assets</a></li>
@@ -246,12 +244,12 @@
 
 </div>
 
-<div id="exhibit-page-navigation">
+<!--div id="exhibit-page-navigation">
             <div id="exhibit-nav-next">
     <a href="/exhibits/show/frida-and-granizo/more-info-about-the-artist" class="next-page">next &rarr;</a>    </div>
         <div id="exhibit-nav-up">
     <span class="current-page"></span>    </div>
-</div>
+</div-->
 
 
 </div><!-- end content -->
