--- a/PWDBnew.html
+++ b/PWDBnew.html
@@ -206,7 +206,7 @@
 <nav id="exhibit-pages" class="side">
     <ul><li class="current"><a href="PWDBnew.html">Intro</a>
 		<ul><li><a href="#" onclick="change_page('1_1_1.html')">The context</a>
-			<ul><li><a href="#" onclick="change_page('1_1_1.html')">Reference institutions and institutional goals</a></li>
+			<ul><li><a href="#" onclick="change_page('1_1_1.html')">Reference institutions</a></li>
 			<li><a href="#" onclick="change_page('1_1_2.html')">Relevant assets</a></li>
 			<li><a href="#" onclick="change_page('1_1_3.html')">The target audience</a></li>
 			<li><a href="#" onclick="change_page('1_1_4.html')">The location</a></li>
@@ -214,7 +214,7 @@
 			</li>
 			
 			<li><a href="#" onclick="change_page('1_2_0.html')">The concept</a>
-			<ul><li><a href="#" onclick="change_page('1_2_1.html')">Specific CH topic selected as case study</a></li>
+			<ul><li><a href="#" onclick="change_page('1_2_1.html')">CH topic case study</a></li>
 			<li><a href="#" onclick="change_page('1_2_2.html')">Chosen cognitive focus</a></li>
 			<li><a href="#" onclick="change_page('1_2_3.html')">Ideation Cards</a></li>
 			<li><a href="#" onclick="change_page('1_2_4.html')">The museological approach</a></li>
@@ -236,7 +236,7 @@
 		
 		<li><a href="#" onclick="change_page('3.html')">Team roles</a></li>
 		<li><a href="#" onclick="change_page('4.html')">Bibliography</a></li>
-		<li><a href="#" onclick="change_page('5.html')">Complementary Material for the Discussion: 3d object and scenes</a></li>
+		<li><a href="#" onclick="change_page('5.html')">Complementary Material</a></li>
 		</ul>
 		</ul>
 	</nav>
